--- a/package.json
+++ b/package.json
@@ -3,26 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/highlight": "^7.0.0",
     "axios": "^0.18.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-loader": "^2.0.0",
     "flow-bin": "^0.67.1",
-    "gh-pages": "^1.1.0",
-    "lodash": "^4.17.5",
-    "material-ui": "^1.0.0-beta.36",
+    "gh-pages": "^1.2.0",
+    "lodash": "^4.17.10",
+    "material-ui": "^1.0.0-beta.46",
     "material-ui-icons": "^1.0.0-beta.36",
     "normalize.css": "^8.0.0",
-    "prop-types": "^15.6.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.1",
-    "react-text-mask": "^5.2.0",
-    "react-viewer": "^2.3.5",
+    "react-text-mask": "^5.4.2",
+    "react-viewer": "^2.5.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
+    "redux-thunk": "^2.3.0",
     "typeface-roboto": "^0.0.54"
   },
   "scripts": {
@@ -35,12 +36,12 @@
     "flow": "flow"
   },
   "devDependencies": {
-    "babel-eslint": "^8.1.1",
+    "babel-eslint": "^7.2.3",
     "eslint": "^4.19.1",
     "eslint-config-react-app": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.46.1",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.7.0"
+    "eslint-plugin-flowtype": "^2.49.3",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.2.0",
+    "eslint-plugin-react": "^7.10.0"
   }
 }
